Termino el segundo ejercicio

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /Actividad 3/Cap3-ej18/nbproject/private/
 /Actividad 3/Cap3-ej18/build/
+/Actividad 3/cap3-ej19/nbproject/private/
+/Actividad 3/cap3-ej19/build/
