Termino el tercer ejercicio

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Actividad 3/Cap3-ej18/build/
 /Actividad 3/cap3-ej19/nbproject/private/
 /Actividad 3/cap3-ej19/build/
+/Actividad 3/cap4-ej7/nbproject/private/
+/Actividad 3/cap4-ej7/build/
