--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /Actividad 3/cap3-ej19/build/
 /Actividad 3/cap4-ej7/nbproject/private/
 /Actividad 3/cap4-ej7/build/
+/Actividad 3/cap4-ej9/nbproject/private/
+/Actividad 3/cap4-ej9/build/
