Termino cuarto ejercicio

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /Actividad 3/cap4-ej7/build/
 /Actividad 3/cap4-ej9/nbproject/private/
 /Actividad 3/cap4-ej9/build/
+/Actividad 3/cap4-ej10/nbproject/private/
+/Actividad 3/cap4-ej10/build/
