--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /Actividad 3/cap4-ej9/build/
 /Actividad 3/cap4-ej10/nbproject/private/
 /Actividad 3/cap4-ej10/build/
+/Actividad 3/cap4-ej22/nbproject/private/
+/Actividad 3/cap4-ej22/build/
