Termino el sexto ejercicio

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /Actividad 3/cap4-ej10/build/
 /Actividad 3/cap4-ej22/nbproject/private/
 /Actividad 3/cap4-ej22/build/
+/Actividad 3/cap4-ej23/nbproject/private/
+/Actividad 3/cap4-ej23/build/
