Termino ej-parte 2

--- a/Actividad 3/ejercicio-parte2/nbproject/project.properties
+++ b/Actividad 3/ejercicio-parte2/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/cap4-ej22.jar
+dist.jar=${dist.dir}/ejercicio-parte2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/cap4-ej22
+dist.jlink.output=${dist.jlink.dir}/ejercicio-parte2
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=cap4-ej22
-main.class=Logica.Cap4Ej22
+jlink.launcher.name=ejercicio-parte2
+main.class=Logica.EjercicioParte2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
