--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /Actividad 3/cap4-ej22/build/
 /Actividad 3/cap4-ej23/nbproject/private/
 /Actividad 3/cap4-ej23/build/
+/Actividad 3/ejercicio-parte2/nbproject/private/
+/Actividad 3/ejercicio-parte2/build/
